--- a/style.css
+++ b/style.css
@@ -42,3 +42,16 @@ ul{
 ul a{
    text-align: center;
 }
+
+.INFOSuccess{
+    margin-top: 12em;
+    text-align: center;
+    color: white;
+    background-color: #00ff00;
+    border-radius: 4em;
+    vertical-align: middle;
+}
+.secondaryTitleSuccess{
+    text-align: center;
+margin-top: 2em;
+}
