--- a/style.css
+++ b/style.css
@@ -55,3 +55,16 @@ ul a{
     text-align: center;
 margin-top: 2em;
 }
+.muestra_tabla table{
+    width: 100%;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    /* border-radius: 1em; */
+    border-style: solid;
+    border-width: 1px;
+    border-color: #00ff00;
+}
+
+.muestra_tabla td{
+    text-align: center;
+}
