--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ form{
     background-color: white;
 height: 20em;
 border-radius: 4em;
+margin-top: -6em;
 }
 ul{
     list-style-type: none;
@@ -55,16 +56,14 @@ ul a{
     text-align: center;
 margin-top: 2em;
 }
-.muestra_tabla table{
-    width: 100%;
-    margin-top: 1em;
-    margin-bottom: 2em;
-    /* border-radius: 1em; */
-    border-style: solid;
-    border-width: 1px;
-    border-color: #00ff00;
+.btn_borrar{
+    margin-top: 2em;
+margin-left: 40%;
+margin-right: 40%;
 }
-
-.muestra_tabla td{
-    text-align: center;
+.btn-left{
+    float: left;
+}
+.btn-right{
+    float: right;
 }
